# enigne2

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
engine2/: CMakeLists.txt
engine2/libs/glad/include/glad/: glad.h
engine2/libs/glad/src/: glad.c
engine2/libs/glfw/debug/: glfw3.lib
engine2/libs/physx/lib/debug/: LowLevelAABB_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  SceneQuery_static_64.lib
engine2/libs/physx/lib/release/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.exp  PhysX_64.map  SceneQuery_static_64.lib
engine2/res/Geometry/: StartHouse.json
engine2/res/Models/: tree.fbx
engine2/res/Shader/: Plane.frag  Plane.vert  Shader.cpp  Shader.h
engine2/src/: Main.cpp
engine2/src/AssetManager/: AssetManager.cpp  AssetManager.h  AssetModel.cpp
engine2/src/Backend/: Backend.cpp  Backend.h  Camera.cpp  Camera.h  GLwindow.cpp  GLwindow.h
engine2/src/Base/: CreateInfo.h  PrimitiveShapes.h  Transform.h  Types.h
engine2/src/Editor/: CameraEditor.cpp  CameraEditor.h  Editor.cpp  Editor.h
engine2/src/Game/: Game.cpp  Game.h
engine2/src/Physics/: ColliderPx.cpp  CollisionPx.cpp  ManagerPx.cpp  Physics.h  PlayerPx.cpp  RaycastingPx.cpp  ScenePx.cpp
engine2/src/Player/: Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h
engine2/src/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine2/src/Types/: Cube.cpp  Cube.h  Door.cpp  Door.h  JSON.cpp  JSON.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Wall.cpp  Wall.h
engine2/src/Types/Renderer/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
engine2/src/Utils/: UtilMesh.cpp  UtilPhysics.cpp  Utils.h
engine2/src/World/: TerrainGen.cpp  TerrainGen.h  World.cpp  World.h
